base/applications/paybridge-api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paybridge-api-gateway
  namespace: paybridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paybridge-api-gateway
  template:
    metadata:
      labels:
        app: paybridge-api-gateway
    spec:
      containers:
        - name: krakend
          image: dentamuhajir/paybridge-gateway-svc:d8d1fb7
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
