base/applications/paybridge-api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybridge-api-gateway-ingress
  namespace: paybridge
spec:
  ingressClassName: nginx
  rules:
    - host: api.paybridge.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paybridge-api-gateway
                port:
                  number: 8000
